--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h3>Clarissa's Branch</h3>
     <h3>Kevin's Branch</h3>
     <h3>Sean's Branch</h3>
+    <h3>louizechi94's Branch</h3>
 
 </body>
 
